style.css
html, body {
    height: 100%;
  }
  
  body {
    display: flex;
    margin-top: 20px;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    row-gap: 20px;
  }
  
  #container {
    font-size: 2em;
    width: 350px;
    height: 350px;
    border: solid black 4px;
    border-radius: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  #container p {
    padding-left: 250px;
    position: absolute;
  }
  
  .block-span {
    display: block;
  }
 
  /* Bars */
  
  .bar {
    border: solid black;
    width: 170px;
    translate: 50%;
    transform-origin: 0% 50%;
    position: absolute;
  }
  
  

